--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/camera": "^5.27.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.27.0",
+    "@ionic-native/ionic-webview": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
