--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myApp",
+  "name": "Bigcity",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -17,6 +17,7 @@
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.6",
     "@angular/core": "~9.1.6",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.1.6",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.6",
@@ -35,6 +36,7 @@
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-res": "^0.15.1",
+    "firebase": "^7.17.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
