--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.6",
     "@capacitor/angular": "^1.0.2",
     "@capacitor/core": "latest",
+    "@ionic-native/analytics-firebase": "^5.27.0",
     "@ionic-native/camera": "^5.27.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.27.0",
@@ -33,6 +34,9 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "cordova-android": "^8.1.0",
+    "cordova-annotated-plugin-android": "^1.0.4",
+    "cordova-play-services-version-adapter": "^1.1.0",
+    "cordova-plugin-analytics": "^2.0.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-res": "^0.15.1",
@@ -81,7 +85,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-file": {}
+      "cordova-plugin-file": {},
+      "cordova-plugin-analytics": {}
     },
     "platforms": [
       "android"
