--- a/package.json
+++ b/package.json
@@ -25,21 +25,25 @@
     "@angular/router": "~9.1.6",
     "@capacitor/angular": "^1.0.2",
     "@capacitor/core": "latest",
-    "@ionic-native/analytics-firebase": "^5.27.0",
     "@ionic-native/camera": "^5.27.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/file": "^5.27.0",
+    "@ionic-native/firebase-analytics": "^5.27.0",
     "@ionic-native/ionic-webview": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "angular-cropperjs": "^0.1.5",
     "cordova-android": "^8.1.0",
-    "cordova-annotated-plugin-android": "^1.0.4",
-    "cordova-play-services-version-adapter": "^1.1.0",
-    "cordova-plugin-analytics": "^2.0.0",
+    "cordova-plugin-androidx": "^2.0.0",
+    "cordova-plugin-androidx-adapter": "^1.1.1",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-firebase-analytics": "^4.3.1",
     "cordova-res": "^0.15.1",
+    "cordova-support-android-plugin": "^1.0.2",
+    "cordova-support-google-services": "^1.4.1",
+    "cropperjs": "^1.5.7",
     "firebase": "^7.17.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
@@ -53,6 +57,7 @@
     "@angular/language-service": "~9.1.6",
     "@capacitor/cli": "latest",
     "@ionic/angular-toolkit": "^2.1.1",
+    "@types/cropperjs": "^1.3.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -86,10 +91,21 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-analytics": {}
+      "cordova-plugin-firebase-analytics": {
+        "FIREBASE_ANALYTICS_COLLECTION_ENABLED": "true",
+        "FIREBASE_ANALYTICS_VERSION": "17.4.+"
+      },
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
     "platforms": [
       "android"
-    ]
+    ],
+    "config": {
+      "ionic_sass": "./scripts/sass.config.js"
+    },
+    "scripts": {
+      "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    }
   }
 }
