--- a/platforms/android/gradle.properties
+++ b/platforms/android/gradle.properties
@@ -31,5 +31,89 @@ android.useAndroidX=false
 android.enableJetifier=false
 android.useAndroidX=false
 android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
 android.useAndroidX=true
 android.enableJetifier=true
